--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
-
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -18,8 +17,7 @@
         android:onClick="selectProfileImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,7 +30,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/profileImg"
         app:layout_constraintStart_toStartOf="@id/profileImg"
-        app:layout_constraintTop_toBottomOf="@id/profileImg"/>
+        app:layout_constraintTop_toBottomOf="@id/profileImg" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +41,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@id/titleName"
         app:layout_constraintStart_toStartOf="@id/titleName"
-        app:layout_constraintTop_toBottomOf="@id/titleName"/>
+        app:layout_constraintTop_toBottomOf="@id/titleName" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,33 +56,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleUsername">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-        <Button
-            android:id="@+id/selectImageBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select Image"
-            android:onClick="selectProfileImage"
-            app:layout_constraintTop_toBottomOf="@id/editButton"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp"/>
 
-        <Button
-            android:id="@+id/captureImageBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Capture Image"
-            android:onClick="captureProfileImage"
-            app:layout_constraintTop_toBottomOf="@id/selectImageBtn"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="16dp"/>
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/selectImageBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select Image"
+                android:onClick="selectProfileImage"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent" />
 
-
-
+            <Button
+                android:id="@+id/captureImageBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Capture Image"
+                android:onClick="captureProfileImage"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -104,7 +98,7 @@
                 android:text="Имя"
                 android:textStyle="bold"
                 android:textColor="@color/lavender"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -114,7 +108,7 @@
                 android:layout_weight="1"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/black"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -123,7 +117,7 @@
             android:layout_height="1dp"
             android:layout_margin="10dp"
             android:alpha="0.5"
-            android:background="@color/lavender"/>
+            android:background="@color/lavender" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -140,7 +134,7 @@
                 android:text="Email"
                 android:textStyle="bold"
                 android:textColor="@color/lavender"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -150,7 +144,7 @@
                 android:layout_weight="1"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/black"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -159,7 +153,7 @@
             android:layout_height="1dp"
             android:layout_margin="10dp"
             android:alpha="0.5"
-            android:background="@color/lavender"/>
+            android:background="@color/lavender" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -176,7 +170,7 @@
                 android:text="Username"
                 android:textStyle="bold"
                 android:textColor="@color/lavender"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -186,7 +180,7 @@
                 android:layout_weight="1"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/black"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -195,7 +189,7 @@
             android:layout_height="1dp"
             android:layout_margin="10dp"
             android:alpha="0.5"
-            android:background="@color/lavender"/>
+            android:background="@color/lavender" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -212,7 +206,7 @@
                 android:text="Пароль"
                 android:textStyle="bold"
                 android:textColor="@color/lavender"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -222,23 +216,38 @@
                 android:layout_weight="1"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/black"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/editButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:id="@+id/editButton"
+        android:background="@color/lavender"
         android:gravity="center"
         android:text="Изменить профиль"
         android:textSize="18sp"
-        app:cornerRadius = "20dp"
+        app:cornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/goToMainButton"
+        app:layout_constraintEnd_toEndOf="@id/linearLayout"
+        app:layout_constraintStart_toStartOf="@id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout" />
+
+    <Button
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:id="@+id/goToMainButton"
+        android:gravity="center"
+        android:text="Перейти на главную страницу"
+        android:textSize="18sp"
+        android:background="@color/lavender"
+        app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/linearLayout"
         app:layout_constraintStart_toStartOf="@id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout"/>
+        app:layout_constraintTop_toBottomOf="@id/editButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
