--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name = "purpule_700">#FF018786</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF000000</color>
-    <color name = "lavender">#8692f7</color>
+    <color name = "lavender">#346DFF</color>
     <color name="grey">#d2d2d2</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">#4885ed</color>
 </resources>
