--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BottomNavActivityPractice" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BottomNavActivityPractice" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/lavender</item>
         <item name="colorPrimaryVariant">@color/lavender</item>
@@ -20,7 +20,7 @@
         <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
     </style>
     <!-- Base application theme. -->
-    <style name="Base.Theme.Habitss" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Habitss" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
