--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,34 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutActivity">
-    <androidx.viewpager2.widget.ViewPager2
-        android:id = "@+id/pagerMain"
-        android:background="@color/white"
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
+    tools:context=".AboutActivity"
+    tools:openDrawer="start">
+
+    <!-- Основной контейнер для фрагментов -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:cardCornerRadius="20dp"
-        android:elevation="5dp"
-        android:translationZ="10dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_height="wrap_content">
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNav"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- Ваш ViewPager2 здесь -->
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            app:backgroundTint="@color/lavender"
-            app:itemIconTint="@color/color_item_buttom_nav"
-            app:itemTextColor="@color/color_item_buttom_nav"
-            app:menu="@menu/bottom_menu"
-            android:layout_height="wrap_content"/>
-    </androidx.cardview.widget.CardView>
+            android:layout_height="match_parent" />
 
+    </LinearLayout>
 
-</RelativeLayout>
+    <!-- Боковое меню NavigationView -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer_menu" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
