--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,92 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingRight="20dp"
-    android:orientation="vertical"
     android:background="@color/colorPrimary"
-    android:paddingLeft="20dp"
-    tools:context=".activity.MainActivity">
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Привет!"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Все привычки"
-                fontPath="fonts/nunito_extra_bold.ttf"
-                android:textStyle="bold"
-                android:textColor="@color/colorAccent"
-                android:textSize="28sp"
-                tools:ignore="MissingPrefix" />
-
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="right|center"
-            android:background="@drawable/calendar"
-            android:id="@+id/calendar"/>
-
-    </FrameLayout>
+    android:orientation="vertical"
+    tools:context=".activity.MainActivity"
+    tools:openDrawer="start">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Привет!"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Все привычки"
+            android:textColor="@color/colorAccent"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp" />
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/noDataImage"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                android:id="@+id/noDataImage"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/taskRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/taskRecycler"/>
+                android:layout_height="match_parent" />
 
         </FrameLayout>
 
         <TextView
+            android:id="@+id/addTask"
             android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:text="Добавить привычку"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:drawableLeft="@drawable/ic_add_black_24dp"
             android:drawablePadding="10dp"
             android:paddingTop="10dp"
-            android:id="@+id/addTask"
-            android:layout_gravity="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="20sp"
-            android:drawableLeft="@drawable/ic_add_black_24dp"
+            android:text="Добавить привычку"
             android:textAlignment="center"
-            android:layout_weight="0.5"
-            android:layout_marginBottom="20dp"/>
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
-</LinearLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:paddingStart="0dp"
+        android:paddingEnd="0dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer_menu" />
+</androidx.drawerlayout.widget.DrawerLayout>
